Refactor RDF4J small-things utilities and tests